--- a/src/components/Save.astro
+++ b/src/components/Save.astro
@@ -169,9 +169,10 @@ import pb from "../lib/pocketbase.js";
 
     try {
       // Déterminer l'URL de base
-      const baseUrl = window.location.hostname === 'localhost' 
-        ? 'http://localhost:8090' 
-        : 'https://ta-vue.bryan-menoux.fr';
+      const baseUrl =
+        window.location.hostname === "localhost"
+          ? "http://localhost:8090"
+          : "https://ta-vue.bryan-menoux.fr";
 
       // Récupérer la configuration actuelle depuis localStorage
       const couleursLunettes = JSON.parse(
