--- a/src/pages/configurateur.astro
+++ b/src/pages/configurateur.astro
@@ -8,6 +8,7 @@ import ResumConfig from "../components/ResumConfig.astro";
 import Tailles from "../components/Tailles.astro";
 import Finitions from "../components/Finitions.astro";
 import Save from "../components/Save.astro";
+import AssistantIA from "../components/AssistantIA.astro";
 import checkIcon from "../assets/check.svg";
 import garantIcon from "../assets/garant.svg";
 ---
@@ -179,6 +180,7 @@ import garantIcon from "../assets/garant.svg";
 
         <!-- Colonne droite: Paramètres -->
         <div class="w-full space-y-4">
+          <AssistantIA />
           <Materiaux />
           <CouleursLunettes />
           <OptionsVerres />
