--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import logo from "../assets/logo.svg";
 ---
 
 <!doctype html>
@@ -9,9 +10,9 @@ import Footer from "../components/Footer.astro";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href={logo.src} />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro Basics</title>
+    <title>ta-vue</title>
   </head>
 
   <body class="min-h-screen text-base-content flex flex-col bg-[#f6f8fb]">
